[package]
name = "hbl-link"
version = "0.1.0"
authors = ["Tom Sputz <tomsputz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
